# dropraw-web

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MIRRORS.md  README.de.md  README.es.md  README.fr.md  README.md  README.ru.md  README.zh.md  RELEASE_CHECKLIST.md  ROADMAP.md  RUSSIAN_MIRRORS.md  SECURITY.md  SUPPORT.md  bitbucket-pipelines.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
.forgejo/workflows/: tests.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  mirror_request.yml  provider_request.yml
.github/workflows/: docker.yml  docs.yml  release.yml  tests.yml  ui-pages.yml
configs/: default.yaml
docs/: index.md
docs/de/: index.md  installation.md  quick-start.md
docs/en/: dropbox.md  google-drive.md  index.md  installation.md  mirrors.md  privacy.md  quick-start.md  retry-resume.md  s3-r2.md  troubleshooting.md  ui.md
docs/es/: index.md  installation.md  quick-start.md
docs/fr/: index.md
docs/launch/: bitbucket-description.txt  codeberg-description.txt  gitflic-description.txt  github-description.txt  gitlab-description.txt  gitverse-description.txt  habr.md  hacker-news.md  linkedin.md  product-hunt.md  reddit.md  seo-snippets.md  telegram.md  vk.md  x-twitter.md
docs/release-notes/: v0.1.0.md
docs/ru/: dropbox.md  google-drive.md  index.md  installation.md  mirrors.md  privacy.md  quick-start.md  retry-resume.md  russian-platforms.md  (+3 more)
examples/: config.dropbox.yaml  config.google-drive.yaml  config.local.yaml  config.s3-r2.yaml  picture-snippet.html  report.example.json
scripts/: build_docs.sh  release_check.py  smoke_test.sh  sync_all_mirrors.sh  sync_international_mirrors.sh  sync_russian_mirrors.sh
tests/: test_config.py  test_dropbox_path_format.py  test_dropbox_retries.py  test_failed_log.py  test_file_filters.py  test_google_drive_provider.py  test_local_provider.py  test_manifest.py  test_output_paths.py  test_provider_detection.py  test_report_security.py  test_resume_logic.py  test_s3_provider.py  test_ui_api.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+91 files in other folders)
